--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+    /* margin: 0;
+    padding: 0; */
 }
 html {
     font-size: 62.5%;
@@ -11,4 +11,22 @@ html {
 main {
     max-width: 120rem;
     margin: 0 auto;
+}
+.hero {
+    width: 100vw;
+    height: 40rem;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    grid-auto-rows: 40rem;
+}
+.hero-info {
+    align-self: center;
+}
+.hero-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+.hero-info button {
+    border-radius: 1rem;
 }
