--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -5,7 +5,7 @@
 }
 html {
     font-size: 62.5%;
-    font-family: "Roboto", sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 main {
@@ -13,20 +13,74 @@ main {
     margin: 0 auto;
 }
 .hero {
-    width: 100vw;
-    height: 40rem;
+    width: 100%;
+    height: auto;
     display: grid;
     grid-template-columns: 2fr 3fr;
     grid-auto-rows: 40rem;
+    border-bottom: 0.1rem solid #ddd;
 }
 .hero-info {
+    height: 100%;
+    padding-left: 20%;
     align-self: center;
 }
+.hero-info h1 {
+    color: #333;
+    font-size: 6rem;
+    font-weight: bolder;
+    margin-bottom: 2.4rem
+}
+.hero-info p {
+    color: #333;
+    font-size: 1.5rem;
+    margin-bottom: 2.4rem
+}
+
 .hero-image {
     width: 100%;
-    height: 100%;
+    height: 95%;
     object-fit: contain;
 }
 .hero-info button {
+    border-radius: 2rem;
+    border: none;
+    color: #333;
+    background-color: #fb8c00;
+    padding: 1.2rem 2.4rem;
+    cursor: pointer;
+}
+.hero-info button:hover {
+    box-shadow: 0 0.3rem 0.5rem 0.1rem;
+}
+
+.services {
+    margin: 10rem 0;
+}
+.services-title {
+    color: #333;
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+}
+.services-dishes {
+    margin: 1rem 0;
+    display: grid;
+    grid-template-columns: repeat(4, minmax(15rem, 20rem));
+    grid-auto-rows: 1fr;
+    gap: 2.5rem;
+    justify-content: center;
+}
+.services-dishes img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    box-shadow: 0 0.2rem 1rem 0.1rem;
     border-radius: 1rem;
+}
+.services-dishes .services-dishes-video {
+    grid-area: 1 / 1 / 3 / 3;
+}
+.services-dishes .services-dishes-video:hover {
+    cursor: pointer;
 }
