--- a/Proyecto/style.css
+++ b/Proyecto/style.css
@@ -13,16 +13,13 @@ main {
     margin: 0 auto;
 }
 .hero {
-    width: 100%;
-    height: auto;
     display: grid;
-    grid-template-columns: 2fr 3fr;
-    grid-auto-rows: 40rem;
+    grid-template-columns: minmax(30rem, 2fr) 3fr;
+    grid-auto-rows: 55rem;
     border-bottom: 0.1rem solid #ddd;
 }
 .hero-info {
     height: 100%;
-    padding-left: 20%;
     align-self: center;
 }
 .hero-info h1 {
@@ -59,14 +56,14 @@ main {
 }
 .services-title {
     color: #333;
-    font-size: 2rem;
+    font-size: 3rem;
     font-weight: bold;
     text-align: center;
 }
 .services-dishes {
     margin: 1rem 0;
     display: grid;
-    grid-template-columns: repeat(4, minmax(15rem, 20rem));
+    grid-template-columns: repeat(auto-fit, minmax(7.5rem, 20rem));
     grid-auto-rows: 1fr;
     gap: 2.5rem;
     justify-content: center;
@@ -75,12 +72,54 @@ main {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    box-shadow: 0 0.2rem 1rem 0.1rem;
     border-radius: 1rem;
 }
 .services-dishes .services-dishes-video {
     grid-area: 1 / 1 / 3 / 3;
 }
+.services-dishes img:hover,
 .services-dishes .services-dishes-video:hover {
+    box-shadow: 0 0.2rem 1rem 0.1rem;
     cursor: pointer;
+}
+
+.menu {
+    margin-bottom: 20rem;
+}
+.menu-title {
+    color: #333;
+    font-size: 3rem;
+    font-weight: bold;
+    text-align: center;
+}
+.menu-grid {
+    margin-bottom: 5rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, 15rem);
+    justify-content: center;
+    gap: 1.5rem;
+}
+.menu-grid img.menu-grid-item {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    background-color: peachpuff;
+    border-top-left-radius: 4rem;
+}
+.menu-grid-item:hover{
+    box-shadow: 0 0.5rem 0.5rem 0;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+    .hero {
+        grid-template-columns: minmax(30rem, 50rem);
+        justify-content: center;
+    }
+    .hero-image {
+        display: none;
+    }
+    .dishes-grid {
+        grid-template-columns: repeat(auto-fit, minmax(75px, 100px));
+    }
 }
